--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  
 </head>
 <body>
+  <script src="https://accounts.google.com/gsi/client" async></script>
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '1438610210064868',
+        cookie     : true,
+        xfbml      : true,
+        version    : 'v12.0'
+      });
+    };
+  
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "https://connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+  </script>
   <app-root></app-root>
 </body>
 </html>
